# SwiftFIX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: bench.yml  ci.yml
bench/: CMakeLists.txt  PERFLOG.md  README.md  results.md
bench/baseline/: README.md
bench/results/: 2026-04-18T03-28-07Z-nogit-Alcidae.json  2026-04-18T03-53-04Z-0a690a0-Alcidae.json  2026-04-18T03-54-06Z-0a690a0-Alcidae.json  2026-04-18T04-08-29Z-0a690a0-Alcidae.json  2026-04-18T04-08-38Z-0a690a0-Alcidae.json  2026-04-18T05-21-48Z-0a690a0-Alcidae.json  2026-04-18T05-36-11Z-0a690a0-Alcidae.json  2026-04-19T20-23-09Z-02fa534-Alcidae-QuickFIX_StreamParse_repeats_10.json  2026-04-19T20-23-09Z-02fa534-Alcidae-QuickFIX_StreamSplit_repeats_10.json  2026-04-19T20-23-09Z-02fa534-Alcidae-SwiftFIX_ScalarSplit_repeats_10.json  README.md
bench/src/: harness.cpp  harness.hpp  main.cpp  replay.cpp  replay.hpp
cmake/: CompilerFlags.cmake  Sanitizers.cmake  SimdDetection.cmake
corpus/: README.md  bulk.stream  generate.py
corpus/valid/: 01_logon  02_heartbeat  03_test_request  04_resend_request  05_new_order_single_buy  06_new_order_single_sell  07_execution_report_filled  08_execution_report_partial  09_order_cancel_request  10_logout
docs/: design.md  embedded_data.md  fallback_policy.md  field_index_format.md
integration/patches/: 0001-expose-parse-from-field-index.patch  README.md  apply.sh
integration/shim/: CMakeLists.txt
integration/shim/include/swiftfix/: quickfix_shim.hpp
integration/shim/src/: quickfix_shim.cpp
integration/tests/: CMakeLists.txt  test_end_to_end.cpp
preparser/: CMakeLists.txt
preparser/include/swiftfix/: field_index.hpp  scanner.hpp  status.hpp
preparser/src/: dispatch.cpp  scanner_avx2.cpp  scanner_scalar.cpp
preparser/tests/: CMakeLists.txt  test_field_index.cpp  test_scanner_basic.cpp  test_scanner_corpus.cpp
profile/: notes.md
scripts/: bench.sh  build.sh  build_debug.sh  profile.sh  verify_corpus.sh
